# pinocchio_aik_solvers

./: README.md
pinocchio_aik_constraint/: CMakeLists.txt  package.xml
pinocchio_aik_constraint/include/pinocchio_aik_constraint/: IKConstraint.h  Jacobian.h  PositionConstraint.h
pinocchio_aik_constraint/src/: IKConstraint.cpp  Jacobian.cpp  PositionConstraint.cpp
pinocchio_prioritized_acc_inverse_kinematics_solver/: CMakeLists.txt  package.xml
pinocchio_prioritized_acc_inverse_kinematics_solver/include/pinocchio_prioritized_acc_inverse_kinematics_solver/: PrioritizedAccInverseKinematicsSolver.h
pinocchio_prioritized_acc_inverse_kinematics_solver/src/: PrioritizedAccInverseKinematicsSolver.cpp
