<?xml version="1.0"?>
<package format="2">
  <name>pinocchio_aik_constraint</name>
  <version>0.0.0</version>
  <description>The pinocchio_aik_constraint package </description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pinocchio</depend>

</package>
