<?xml version="1.0"?>
<package format="2">
  <name>pinocchio_prioritized_acc_inverse_kinematics_solver</name>
  <version>0.0.0</version>
  <description>The pinocchio_prioritized_acc_inverse_kinematics_solver package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pinocchio_aik_constraint</depend>
  <depend>prioritized_qp_osqp</depend>

</package>
